# rs-google-play

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
googleplay-protobuf/: Cargo.toml  README.md  build.rs
googleplay-protobuf/protos/: GooglePlay.proto
googleplay-protobuf/src/: googleplay.rs  lib.rs
gpapi/: Cargo.toml  README.md  README.tpl  build.rs  device.properties
gpapi/src/: consts.rs  device_properties.rs  error.rs  lib.rs
gpapi/src/protos/: googleplay.rs
tokio-dl-stream-to-disk/: Cargo.toml
