[package]
name = "googleplay-protobuf"
version = "0.1.0"
authors = ["David Weinstein <dweinst@insitusec.com>", "Bill Budington <bill@eff.org>"]
build = "build.rs"
license = "MIT"
edition = "2018"

[features]
with-serde = []

[dependencies]
serde = "1"
protobuf = { version = "2.23", features = ["with-bytes", "with-serde"] }

[build-dependencies]
protobuf-codegen-pure = "2.23"
