[package]
name = "gpapi"
version = "3.1.0"
authors = ["David Weinstein <dweinst@insitusec.com>", "Bill Budington <bill@eff.org>"]
build = "build.rs"
license = "MIT"
edition = "2021"
description = "A library for interacting with the Google Play API"
homepage = "https://github.com/EFForg/rs-google-play/tree/master/gpapi"
repository = "https://github.com/EFForg/rs-google-play/tree/master/gpapi"

[dependencies]
prost = "0.11"
reqwest = { version = "0.11", features = ["stream"] }
bytes = "1"
openssl = "0.10"
base64 = "0.20"
byteorder = "1"
hex = "0.4"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
hyper-openssl = "0.9"
googleplay-protobuf = "1"
bincode = "1"
futures-util = { version = "0.3", features = ["io"] }
tokio-dl-stream-to-disk = "0.3"

[build-dependencies]
googleplay-protobuf = "1"
prost = "0.11"
bincode = "1"
configparser = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
